bug with carousel arrow on mobile fixed

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -268,8 +268,10 @@
     .header{
         .header_container{
             .prev.slick-arrow,
-            .next.slick-arrow{
+            .next.slick-arrow,
+            .prev, .next{
                 display: none;
+                z-index: -10;
             }
         }
         
